add sort theo giá

--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -7,6 +7,7 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
     width:400px;
     height:440px;
+    z-index:1000;
 }
 
 .filter_loc.show {
@@ -85,4 +86,9 @@
 .effect_hover:hover
 {
     transform: translateY(-7px);
+}
+
+.xacdinhZ
+{
+    z-index: 1;
 }
