--- a/layout/cart.html
+++ b/layout/cart.html
@@ -18,7 +18,7 @@
         <div class="border rounded py-2 px-4 d-flex align-items-center">
             <div class="me-auto">
                 <p class="mb-0">
-                    <a href="../index.html" class="text-decoration-none link-primary aHover">
+                    <a href="../index.php" class="text-decoration-none link-primary aHover">
                         Trang chủ
                     </a>
                     <span class="mx-2"><i class="fa-solid fa-angle-right"></i></span>
@@ -38,7 +38,7 @@
         <div class="p-4">
             <h5 class="mb-3">Giỏ hàng của bạn</h5>
             <p class="text-muted">Hiện tại giỏ hàng đang trống.</p>
-            <a href="../index.html" class="btn btn-dark px-4 py-2 text-uppercase fw-bold">
+            <a href="../index.php" class="btn btn-dark px-4 py-2 text-uppercase fw-bold">
                 Continue Shopping
             </a>
         </div>
