--- a/assets/css/product_detail.css
+++ b/assets/css/product_detail.css
@@ -26,6 +26,18 @@
     user-select: none;
 }
 
+/* Ẩn mũi tên trên Chrome, Safari, Edge */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Ẩn mũi tên trên Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 .container {
     background-color: #f5f5f5;
 }
