done biến thể sản phẩm

--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -173,3 +173,14 @@ input[type=number] {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+
+@media (max-width: 767.98px) {
+    .quanlysp {
+        margin-left: 0 !important;
+    }
+    .nav-left
+    {
+        display: none;
+    }
+
+}
