--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -77,7 +77,7 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi,
 .thongbaoThanhCong,
 .thongbaoUpdateThanhCong,
-.thongbaoXoaThanhCong,.thongBaoLoiGia  {
+.thongbaoXoaThanhCong,.thongBaoLoiGia,.thongbaoXoaKhongThanhCong  {
     display: none;
     opacity: 0;
     transition: opacity 0.6s ease;
@@ -100,7 +100,7 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi.show,
 .thongbaoThanhCong.show,
 .thongbaoUpdateThanhCong.show,
-.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show {
+.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show,.thongbaoXoaKhongThanhCong.show {
     display: block;
     opacity: 1;
 }
