--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -77,7 +77,7 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi,
 .thongbaoThanhCong,
 .thongbaoUpdateThanhCong,
-.thongbaoXoaThanhCong,.thongBaoLoiGia,.thongbaoXoaKhongThanhCong  {
+.thongbaoXoaThanhCong,.thongBaoLoiGia,.thongbaoXoaKhongThanhCong,.thongbaoXoaThatBai  {
     display: none;
     opacity: 0;
     transition: opacity 0.6s ease;
@@ -100,7 +100,7 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi.show,
 .thongbaoThanhCong.show,
 .thongbaoUpdateThanhCong.show,
-.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show,.thongbaoXoaKhongThanhCong.show {
+.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show,.thongbaoXoaKhongThanhCong.show,.thongbaoXoaThatBai.show {
     display: block;
     opacity: 1;
 }
@@ -131,7 +131,8 @@ input[type=number] {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1050;
-    background-color: #28a745;
+    background-color: #FFF9E6;
+    color: #5C3D00;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
@@ -183,4 +184,16 @@ input[type=number] {
         display: none;
     }
 
+}
+button {
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1); /* mượt như bơ */
+    will-change: transform; /* tối ưu hiệu năng */
+}
+
+button:hover {
+    transform: scale(1.08);
+}
+
+button:active {
+    transform: scale(0.96);
 }
