--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -6,7 +6,7 @@
     visibility: hidden;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
     width:400px;
-    height:490px;
+    /* height:490px; */
     z-index:1000;
 }
 .btn-cart-black {
