--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -70,7 +70,11 @@
 #sort-icon:active {
     transform: scale(0.9); /* hiệu ứng click */
 }
-
+.product-img {
+    width: 100%;
+    height: 390px;        /* 👈 chỉnh chiều cao tùy ý */
+    object-fit: cover;    /* Cắt ảnh nhưng giữ tỷ lệ */
+}
 
 @media (max-width: 768px) {
     .filter_loc {
@@ -80,9 +84,12 @@
         width: 90vw !important;
         max-width: 400px;
         z-index: 999;
-        height: 590px;
         position: fixed !important;
-        top: 60px;
+        top: 30px;
+        
+    }
+    .product-img {
+        height: 100%;       
     }
 }
 
@@ -104,3 +111,10 @@
 {
     z-index: 1000;
 }
+.limit-text {
+    max-width: 50ch;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
