--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -114,7 +114,8 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi,
 .thongbaoThanhCong,
 .thongbaoUpdateThanhCong,
-.thongbaoXoaThanhCong,.thongBaoLoiGia,.thongbaoXoaKhongThanhCong,.thongbaoXoaThatBai,.thongbaoUpdateKhongThanhCong  {
+.thongbaoXoaThanhCong,.thongBaoLoiGia,.thongbaoXoaKhongThanhCong,.thongbaoXoaThatBai,.thongbaoUpdateKhongThanhCong,
+.thongbaoLuuKhongThanhCong,.thongbaoLuuThanhCong  {
     display: block;
     opacity: 0;
     transition: opacity 0.6s ease;
@@ -137,7 +138,8 @@ min-width: 50px; /* Đảm bảo cột ID không quá nhỏ */
 .thongbaoLoi.show,
 .thongbaoThanhCong.show,
 .thongbaoUpdateThanhCong.show,
-.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show,.thongbaoXoaKhongThanhCong.show,.thongbaoXoaThatBai.show,.thongbaoUpdateKhongThanhCong.show {
+.thongbaoXoaThanhCong.show,.thongBaoLoiGia.show,.thongbaoXoaKhongThanhCong.show,.thongbaoXoaThatBai.show,.thongbaoUpdateKhongThanhCong.show,
+.thongbaoLuuKhongThanhCong.show,.thongbaoLuuThanhCong.show {
     display: block;
     opacity: 1;
 }
@@ -168,6 +170,24 @@ input[type=number] {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1050;
+    background-color: #FFF9E6;
+    color: #5C3D00;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+    width: 400px;
+    max-width: 90%;
+    transition: all 0.2s ease-in-out;
+}
+
+.thongBaoGia
+{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1200;
     background-color: #FFF9E6;
     color: #5C3D00;
     padding: 20px;
