--- a/assets/css/product_detail.css
+++ b/assets/css/product_detail.css
@@ -133,10 +133,12 @@ input[type=number] {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-width: 300px;
 }
 
 .product-item img {
     width: 100%;
+    height: 100%;
     object-fit: contain;
     margin: auto;
 }
