--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -380,3 +380,27 @@ button:active {
     background-color: rgba(255, 255, 255, 0.25);
     transform: translateX(4px);
 }
+
+/* xử lý phần lọc */
+
+.filter-icon:hover
+{
+    cursor: pointer;
+}
+.filter_loc {
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+    visibility: hidden;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+    width:400px;
+    /* height:490px; */
+    z-index:1000;
+}
+.filter_loc.show {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+    visibility: visible;
+}
