--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -494,3 +494,8 @@ button:active {
     font-size: 16px;
     padding: 6px 10px;
 }
+.row-error-highlight {
+    border: 2px solid red !important;
+  }
+  
+  
