--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,6 +5,10 @@
   align-items: center;
   padding: 10px 40px;
   border-bottom: 1px solid #ccc;
+  top: 0;
+  position: sticky;
+  z-index: 9999;
+  background-color: #FFFFFF;
 }
 
 /* Ẩn nút bars trên màn hình lớn */
