fix logic sanpham + them cot is_deleted ben ctpn

--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -498,4 +498,12 @@ button:active {
     border: 2px solid red !important;
   }
   
-  
+  .giaodienmb {
+    display: table-cell; /* Hiển thị mặc định */
+}
+
+@media (max-width: 699px) {
+    .giaodienmb {
+        display: none !important;
+    }
+}
