--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -198,3 +198,32 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+/* Khung ô chọn */
+.select2-container .select2-selection--single {
+    height: 37px !important;        /* Nhỏ hơn mặc định */
+    padding: 4px 10px;
+    border: 1px solid #ced4da;
+    border-radius: 0.375rem;
+    font-size: 18px;
+}
+
+/* Text căn giữa + cỡ chữ */
+.select2-selection__rendered {
+    line-height: 24px !important;
+    font-size: 17px !important;
+}
+
+/* Mũi tên */
+.select2-selection__arrow {
+    height: 100% !important;
+    right: 8px !important;
+}
+
+/* Danh sách tùy chọn */
+.select2-container--default .select2-results__option {
+    font-size: 16px;
+    padding: 6px 10px;
+}
+.row-error-highlight {
+    border: 2px solid red !important;
+  }
