--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -178,7 +178,8 @@
 .thongBaoQuyen,
 .thongbaoXoaPNthanhcong,
 .thongbaoXoaPNKhongThanhCong,
-.thongbaoThemBTThanhCong {
+.thongbaoThemBTThanhCong,
+.thongbaoXacNhanThanhCong {
     display: block;
     opacity: 0;
     transition: opacity 0.6s ease;
@@ -213,7 +214,8 @@
 .thongBaoQuyen.show,
 .thongbaoXoaPNthanhcong.show,
 .thongbaoXoaPNKhongThanhCong.show,
-.thongbaoThemBTThanhCong.show {
+.thongbaoThemBTThanhCong.show,
+.thongbaoXacNhanThanhCong.show {
     display: block;
     opacity: 1;
 }
