--- a/User-form/Login_Form/css/Login_Form.css
+++ b/User-form/Login_Form/css/Login_Form.css
@@ -17,5 +17,9 @@ body, html {
 .avatar img {
   border: 1px solid black;
 }
+input::-ms-reveal
+{
+   display: none;
+}
 /* Vùng nền chứa icon động */
 
