--- a/User-form/Login_Form/css/Login_Form.css
+++ b/User-form/Login_Form/css/Login_Form.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 body, html {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Oswald', sans-serif;
   background: linear-gradient(135deg, #eeeeee, #f5f5f5);
   margin: 0;
 }
