--- a/admin/assets/css/sanpham.css
+++ b/admin/assets/css/sanpham.css
@@ -509,3 +509,9 @@ button:active {
         display: none !important;
     }
 }
+.cotxuly {
+    width: 10%;
+    max-width: 100px;
+    min-width: 80px;
+    text-align: center;
+}
